feat: replace blocks action